export interface AdministrativeDocument {
  no: string;
  level: string;
  date: Date;
  pursuantToDec_TCT: string;
  pursuantToDec_TTMN: string;
}
